Fri Aug 15 11:55:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/Makefile.am:
	- make win64 compile again

Fri Aug 15 10:12:34 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: remove strange characters

Fri Aug 15 00:42:28 EDT 2008	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am doc/userguide.dsl.in doc/userguide.sgml
	- Generate UTF-8 output with content-type header

Thu Aug 14 11:14:21 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: make openjade happy

Thu Aug 14 10:48:38 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c:
	- add "asa database" option to specify ASA database

Wed Aug 13 15:06:17 EDT 2008	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml advice about unicode strings
	* src/dblib/dblib.c tdserror for setting invalid TDS version

Wed Aug 13 00:08:28 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/tds/iconv.c clarified log messages

Thu Aug 07 12:05:03 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: small network optimization

Thu Aug 07 09:17:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: use NTLMv2 if possible

Wed Aug 06 09:32:32 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c src/tds/login.c src/tds/mem.c src/tds/token.c:
	- keep packet size to safe values

Thu Jul 31 16:53:35 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: removed important FIXMEs

Thu Jul 31 06:12:05 EDT 2008	JK Lowden <jklowden@freetds.org>
	* doc/tds.html: updated and cleaned up somewhat

Wed Jul 30 23:25:26 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: additional cleanup and notes

Wed Jul 30 16:36:52 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c:
	- merged patch #2031829 about NTLMv2, still some FIXME/TODO
