@@ -71,3 +71,5 @@ cancel
 test64
 wchar
 transaction2
+utf8
+
