@@ -1,3 +1,9 @@
+Sat Aug 16 16:47:21 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/sql2tds.c:
+	- allow SQL_WCHAR/SQL_WVARCHAR
+	* src/odbc/unittests/Makefile.am src/odbc/unittests/utf8.c:
+	- add test for utf-8 encoding on client
+
 Fri Aug 15 11:55:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/ctlib/unittests/Makefile.am:
 	- make win64 compile again
@@ -539,4 +545,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2584 2008-08-15 09:55:22 freddy77 Exp $
+$Id: ChangeLog,v 1.2585 2008-08-16 14:48:57 freddy77 Exp $
